--- a/nx.json
+++ b/nx.json
@@ -1,11 +1,5 @@
 {
     "npmScope": "fundamental-ngx",
-    "implicitDependencies": {
-        "angular.json": "*",
-        "package.json": "*",
-        "tsconfig.json": "*",
-        "nx.json": "*"
-    },
     "affected": {
         "defaultBase": "main"
     },
@@ -64,7 +58,8 @@
     "$schema": "./node_modules/nx/schemas/nx-schema.json",
     "targetDefaults": {
         "build": {
-            "dependsOn": ["^build"]
+            "dependsOn": ["^build"],
+            "inputs": ["production", "^production"]
         },
         "build-umbrella": {
             "dependsOn": ["^build-umbrella"]
@@ -72,5 +67,10 @@
         "prepare": {
             "dependsOn": ["build-umbrella"]
         }
+    },
+    "namedInputs": {
+        "default": ["{projectRoot}/**/*", "sharedGlobals"],
+        "sharedGlobals": ["{workspaceRoot}/angular.json", "{workspaceRoot}/tsconfig.json", "{workspaceRoot}/nx.json"],
+        "production": ["default"]
     }
 }
