--- a/package.json
+++ b/package.json
@@ -40,18 +40,18 @@
     "registry": "https://repository.hybris.com/api/npm/npm-repository/"
   },
   "dependencies": {
-    "@angular/animations": "14.1.3",
-    "@angular/cdk": "14.1.3",
-    "@angular/common": "14.1.3",
-    "@angular/compiler": "14.1.3",
-    "@angular/core": "14.1.3",
-    "@angular/forms": "14.1.3",
-    "@angular/platform-browser": "14.1.3",
-    "@angular/platform-browser-dynamic": "14.1.3",
-    "@angular/router": "14.1.3",
+    "@angular/animations": "15.0.0",
+    "@angular/cdk": "15.0.0",
+    "@angular/common": "15.0.0",
+    "@angular/compiler": "15.0.0",
+    "@angular/core": "15.0.0",
+    "@angular/forms": "15.0.0",
+    "@angular/platform-browser": "15.0.0",
+    "@angular/platform-browser-dynamic": "15.0.0",
+    "@angular/router": "15.0.0",
     "@fundamental-styles/fn": "0.25.1-rc.16",
     "@fundamental-styles/cx": "0.25.1-rc.16",
-    "@nrwl/angular": "14.5.10",
+    "@nrwl/angular": "15.2.1",
     "@sap-theming/theming-base-content": "11.1.44",
     "@stackblitz/sdk": "1.8.0",
     "@types/google.visualization": "0.0.68",
@@ -79,35 +79,35 @@
   "devDependencies": {
     "@actions/core": "1.9.0",
     "@angular-builders/custom-webpack": "14.0.0",
-    "@angular-devkit/build-angular": "14.1.3",
-    "@angular-devkit/core": "14.1.3",
-    "@angular-devkit/schematics": "14.1.3",
-    "@angular-eslint/eslint-plugin": "14.0.3",
-    "@angular-eslint/eslint-plugin-template": "14.0.3",
-    "@angular-eslint/template-parser": "14.0.3",
-    "@angular/cli": "~14.1.3",
-    "@angular/compiler-cli": "14.1.3",
-    "@angular/language-service": "14.1.3",
+    "@angular-devkit/build-angular": "15.0.0",
+    "@angular-devkit/core": "15.0.0",
+    "@angular-devkit/schematics": "15.0.0",
+    "@angular-eslint/eslint-plugin": "14.0.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.4",
+    "@angular-eslint/template-parser": "14.0.4",
+    "@angular/cli": "15.0.0",
+    "@angular/compiler-cli": "15.0.0",
+    "@angular/language-service": "15.0.0",
     "@angularclass/hmr": "3.0.0",
     "@babel/core": "7.13.14",
     "@commitlint/cli": "16.1.0",
     "@commitlint/config-conventional": "16.2.1",
     "@jsdevtools/npm-publish": "1.4.3",
-    "@nrwl/cli": "14.5.10",
-    "@nrwl/devkit": "14.5.10",
-    "@nrwl/eslint-plugin-nx": "14.5.10",
-    "@nrwl/linter": "14.5.10",
-    "@nrwl/nx-cloud": "14.6.0",
-    "@nrwl/nx-plugin": "14.5.10",
+    "@nrwl/cli": "15.2.1",
+    "@nrwl/devkit": "15.2.1",
+    "@nrwl/eslint-plugin-nx": "15.2.1",
+    "@nrwl/linter": "15.2.1",
+    "@nrwl/nx-cloud": "15.0.2",
+    "@nrwl/nx-plugin": "15.2.1",
     "@nrwl/schematics": "8.12.11",
-    "@nrwl/tao": "14.5.10",
-    "@nrwl/workspace": "14.5.10",
-    "@schematics/angular": "~14.1.3",
+    "@nrwl/tao": "15.2.1",
+    "@nrwl/workspace": "15.2.1",
+    "@schematics/angular": "15.0.0",
     "@types/jasmine": "3.10.2",
     "@types/jasminewd2": "2.0.8",
     "@types/lodash-es": "4.17.6",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
+    "@typescript-eslint/eslint-plugin": "5.36.1",
+    "@typescript-eslint/parser": "5.36.1",
     "@wdio/allure-reporter": "7.7.3",
     "@wdio/cli": "7.16.16",
     "@wdio/jasmine-framework": "7.0.0",
@@ -156,9 +156,9 @@
     "karma-webpack": "5.0.0",
     "lint-staged": "12.4.0",
     "nan": "2.14.2",
-    "ng-packagr": "14.1.0",
+    "ng-packagr": "15.0.0",
     "ngx-cva-test-suite": "~1.0.4",
-    "nx": "14.5.10",
+    "nx": "15.2.1",
     "postcss": "^8.4.8",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
@@ -172,7 +172,7 @@
     "tsconfig-paths": "4.1.0",
     "typedoc": "0.21.9",
     "typedoc-plugin-merge-modules": "2.1.1",
-    "typescript": "4.7.4",
+    "typescript": "4.8.4",
     "wait-on": "6.0.1",
     "wdio-axe": "2.2.2",
     "wdio-chromedriver-service": "6.0.4",
