chore: removed enableIvy compiler option. v15 update

--- a/apps/docs/tsconfig.app.json
+++ b/apps/docs/tsconfig.app.json
@@ -10,8 +10,5 @@
     },
     "files": ["src/main.ts", "src/polyfills.ts"],
     "include": ["src/*.d.ts", "**/*.ts"],
-    "exclude": ["**/*.spec.ts", "**/e2e/*.ts", "dist"],
-    "angularCompilerOptions": {
-        "enableIvy": true
-    }
+    "exclude": ["**/*.spec.ts", "**/e2e/*.ts", "dist"]
 }
