--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
     "@angular/platform-browser": "15.0.2",
     "@angular/platform-browser-dynamic": "15.0.2",
     "@angular/router": "15.0.2",
-    "@fundamental-styles/cx": "0.25.1-rc.16",
-    "@fundamental-styles/fn": "0.25.1-rc.16",
+    "@fundamental-styles/common-css": "0.26.4",
+    "@fundamental-styles/cx": "0.26.4",
+    "@fundamental-styles/fn": "0.26.4",
     "@nrwl/angular": "15.3.0",
-    "@sap-theming/theming-base-content": "11.1.47",
+    "@sap-theming/theming-base-content": "11.1.48",
     "@stackblitz/sdk": "1.8.1",
     "@types/google.visualization": "0.0.68",
     "@types/node": "14.14.10",
@@ -68,7 +69,7 @@
     "karma-viewport": "1.0.8",
     "lodash-es": "4.17.21",
     "moment": "2.29.4",
-    "ngx-markdown": "14.0.1",
+    "ngx-markdown": "15.0.0",
     "rxjs": "7.5.7",
     "tslib": "2.4.1",
     "zone.js": "0.11.7"
@@ -96,7 +97,6 @@
     "@nrwl/linter": "15.3.0",
     "@nrwl/nx-cloud": "15.0.2",
     "@nrwl/nx-plugin": "15.3.0",
-    "@nrwl/schematics": "8.12.11",
     "@nrwl/tao": "15.3.0",
     "@nrwl/workspace": "15.3.0",
     "@schematics/angular": "15.0.2",
@@ -104,16 +104,16 @@
     "@swc/core": "1.3.21",
     "@types/jasmine": "3.10.2",
     "@types/lodash-es": "4.17.6",
+    "@types/marked": "4.0.3",
     "@typescript-eslint/eslint-plugin": "5.45.1",
     "@typescript-eslint/parser": "5.45.1",
-    "@wdio/allure-reporter": "7.7.3",
-    "@wdio/cli": "7.16.16",
-    "@wdio/jasmine-framework": "7.0.0",
-    "@wdio/local-runner": "7.16.15",
-    "@wdio/sauce-service": "7.16.16",
-    "@wdio/spec-reporter": "7.7.3",
+    "@wdio/allure-reporter": "7.28.0",
+    "@wdio/cli": "7.28.1",
+    "@wdio/jasmine-framework": "7.26.0",
+    "@wdio/local-runner": "7.28.1",
+    "@wdio/sauce-service": "7.28.1",
+    "@wdio/spec-reporter": "7.28.0",
     "ajv-formats": "2.1.1",
-    "angular-cli-ghpages": "1.0.5",
     "autoprefixer": "10.4.13",
     "axe-core": "4.5.2",
     "axe-html-reporter": "2.2.3",
@@ -153,6 +153,7 @@
     "karma-typescript-angular2-transform": "5.5.3",
     "karma-webpack": "5.0.0",
     "lint-staged": "13.1.0",
+    "marked": "4.0.19",
     "nan": "2.17.0",
     "ng-packagr": "15.0.1",
     "ngx-cva-test-suite": "1.0.4",
@@ -173,8 +174,9 @@
     "typescript": "4.8.4",
     "wait-on": "6.0.1",
     "wdio-axe": "2.2.3",
-    "wdio-chromedriver-service": "6.0.4",
-    "webdriverio": "7.27.0"
+    "wdio-chromedriver-service": "8.0.1",
+    "webdriverio": "7.28.1",
+    "webpack": "5.75.0"
   },
   "lint-staged": {
     "*.{js,ts,html,md,scss,css,json,yml}": "nx format:write --files=",
