--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,10 @@
                         "allow": [],
                         "depConstraints": [
                             {
+                                "sourceTag": "scope:fdk",
+                                "onlyDependOnLibsWithTags": ["scope:fdk"]
+                            },
+                            {
                                 "sourceTag": "scope:fd",
                                 "onlyDependOnLibsWithTags": ["scope:fd", "scope:i18n"]
                             },
@@ -32,6 +36,7 @@
                             {
                                 "sourceTag": "scope:docs",
                                 "onlyDependOnLibsWithTags": [
+                                    "scope:fdk",
                                     "scope:docs",
                                     "scope:fd",
                                     "scope:fdp",
