--- a/libs/docs/core/legacy-avatar-group/project.json
+++ b/libs/docs/core/legacy-avatar-group/project.json
@@ -1,16 +1,16 @@
 {
-    "name": "docs-core-avatar-group",
-    "sourceRoot": "libs/docs/core/avatar-group",
+    "name": "docs-core-legacy-avatar-group",
+    "sourceRoot": "libs/docs/core/legacy-avatar-group",
     "projectType": "library",
     "prefix": "fundamental-ngx",
     "targets": {
         "e2e": {
             "executor": "@fundamental-ngx/nx-plugin:e2e-test",
             "options": {
-                "e2eFiles": ["libs/docs/core/avatar-group/e2e/**/*.e2e-spec.ts"],
+                "e2eFiles": ["libs/docs/core/legacy-avatar-group/e2e/**/*.e2e-spec.ts"],
                 "devServerTarget": "docs:serve:e2e"
             },
-            "outputs": ["{workspaceRoot}/allure-results/docs-core-avatar-group"]
+            "outputs": ["{workspaceRoot}/allure-results/docs-core-legacy-avatar-group"]
         }
     },
     "tags": ["type:lib", "scope:docs"]
